--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-path",
+  "name": "node-path-choice",
   "version": "1.0.0",
   "description": "Gets you the root of your source file directory easily and better than rootpath.",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gitfaf/node-path.git"
+    "url": "git+https://github.com/gitfaf/node-path-choice.git"
   },
   "keywords": [
     "node-path",
@@ -25,7 +25,7 @@
   "author": "Git Faf <git.faf@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gitfaf/node-path/issues"
+    "url": "https://github.com/gitfaf/node-path-choice/issues"
   },
-  "homepage": "https://github.com/gitfaf/node-path#readme"
+  "homepage": "https://github.com/gitfaf/node-path-choice#readme"
 }
