--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "keywords": [
     "node-path",
-    "node-path-choice"
+    "node-path-choice",
     "path",
     "rootpath",
     "relative",
