--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "node-path-choice",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Gets you the root of your source file directory easily and better than rootpath.",
   "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
