--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Gets you the root of your source file directory easily and better than rootpath.",
   "main": "src/index.js",
   "scripts": {
-    "test": "jasmine",
-    "lint": "eslint **/*.js"
+    "test": "npm run build && jasmine",
+    "build": "node_modules/.bin/tsc --project tsconfig.json"
   },
   "repository": {
     "type": "git",
